# ember-rescue

./: .dockerignore  .gitignore  .releaserc.json  CHANGELOG.md  README.md  backend.Dockerfile  build-exe.sh  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  sea-config.json
.github/workflows/: backend.yml  main.yml  release.yml  test-and-cover.yml
.run/: backend_dev.run.xml  documentation_dev.run.xml  frontend_dev.run.xml
backend/: .dev.env  .dockerignore  Dockerfile  database.sqlite  eslint.config.js  package.json  pnpm-lock.yaml
backend/prisma/: schema.prisma
backend/src/: app.module.ts  constants.ts  main.ts  types.ts
backend/src/alarmstichwort/: alarmstichwort.controller.spec.ts  alarmstichwort.module.ts  alarmstichwort.service.spec.ts  (+3 more)
common-dtos/: package.json  pnpm-lock.yaml
common-dtos/src/: bearbeiter.dto.ts  einsatztagebuch.dto.ts
documentation/: package.json  pnpm-lock.yaml
ember-rescue/: package.json  pnpm-lock.yaml
frontend/: .prettierrc  .prettierrc.js  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  routeTree.gen.ts  types.ts  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
frontend/tests/: test-setup.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  main.rs
src/hooks/: database.hook.ts
(+409 files in other folders)
