[package]
name = "project-rescue"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.24", features = [] }
tauri-plugin-shell = "2.0.0-beta.9"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tauri-plugin-http = "2.0.0-beta.12"
tauri-plugin-keyring = { git = "https://github.com/LightraysTech/tauri-plugin-keyring" }
tauri-plugin-network = "2.0.3-beta.1"
